force-app/main/default/objects/Macroprofil_Reseau__c/Macroprofil_Reseau__c.object-meta.xml
<CustomObject>
    <description>Réseaux ajoutés par défaut au relais lors de son association avec un macroprofil</description>
    <label>Réseau par défaut</label>
    <nameField>
        <displayFormat>RPD-{0000}</displayFormat>
        <label>Numéro du Réseau par défaut</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Réseaux par défaut</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>