force-app/main/default/objects/Macroprofil_Reseau__c/fields/Exclu__c.field-meta.xml
<CustomField>
    <fullName>Exclu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclu</label>
    <type>Checkbox</type>
</CustomField>