force-app/main/default/objects/Macroprofil_Reseau__c/fields/Macroprofil__c.field-meta.xml
<CustomField>
    <fullName>Macroprofil__c</fullName>
    <label>Macroprofil</label>
    <referenceTo>Macroprofil__c</referenceTo>
    <relationshipLabel>Réseaux par défaut</relationshipLabel>
    <relationshipName>Reseaux_par_defaut</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>