force-app/main/default/objects/Macroprofil_Reseau__c/fields/ReferenceExterne__c.field-meta.xml
<CustomField>
    <fullName>ReferenceExterne__c</fullName>
    <externalId>true</externalId>
    <label>Réference Externe</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>