force-app/main/default/objects/Macroprofil_Reseau__c/fields/Reseau__c.field-meta.xml
<CustomField>
    <fullName>Reseau__c</fullName>
    <label>Réseau</label>
    <referenceTo>Reseau__c</referenceTo>
    <relationshipLabel>Macroprofils associés</relationshipLabel>
    <relationshipName>Reseaux_par_defaut</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>