force-app/main/default/objects/Macroprofil_Reseau__c/fields/Techatraiter__c.field-meta.xml
<CustomField>
    <fullName>Techatraiter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Techatraiter</label>
    <type>Checkbox</type>
</CustomField>