force-app/main/default/objects/Macroprofil_Reseau__c/validationRules/ReseauParDefaut_VR01_chooseOneValue.validationRule-meta.xml
<ValidationRule>
    <fullName>ReseauParDefaut_VR01_chooseOneValue</fullName>
    <active>true</active>
    <errorConditionFormula>If(Active__c = true,1,0)+ 
If(Exclu__c = true,1,0)+ 
If(Interdit__c = true, 1,0) 
&gt; 1</errorConditionFormula>
    <errorMessage>Veuillez choisir une des cases à cochés suivantes (Activé, Exclu ou Interdit)</errorMessage>
</ValidationRule>